name:                trade-leaf-api
version:             0.0.0.1
synopsis:            JSON API for tradeLeaf iOS/Android application
description:         JSON API for tradeLeaf iOS/Android application
license:             MIT
license-file:        LICENSE
author:              Pat Wentz
maintainer:          patrick.w.wentz@gmail.com
copyright:           2017 Pat Wentz
category:            Web
build-type:          Simple
cabal-version:       >=1.18

source-repository head
    type:
        git
    location:
        https://www.github.com/pwentz/trade-leaf-api

executable trade-leaf
    main-is:
        Main.hs
    build-depends:
        base >= 4.7 && < 5
      , trade-leaf-api
      , persistent-postgresql
      , wai
      , warp
      , monad-logger
      , safe
    hs-source-dirs:
        app
    default-language:
        Haskell2010

executable seed-db
    main-is:
        Main.hs
    hs-source-dirs:
        seed
    build-depends:
        base >= 4.7 && < 5
      , trade-leaf-api
      , persistent-postgresql
      , time
      , monad-control
      , transformers
      , mtl
      , bytestring

library
    default-language:
        Haskell2010
    hs-source-dirs:
        src
    exposed-modules:
        Config
      , Api
      , Api.Auth
      , Api.Category
      , Api.Error
      , Api.Match
      , Api.Message
      , Api.Offer
      , Api.Photo
      , Api.Request
      , Api.Trade
      , Api.TradeChat
      , Api.User
      , Data.Coords
      , Db.Main
      , Models.Category
      , Models.Message
      , Models.Offer
      , Models.Photo
      , Models.Request
      , Models.Trade
      , Models.TradeChat
      , Models.User
      , Queries.Match
      , Queries.Message
      , Queries.Offer
      , Queries.Request
      , Queries.Trade
      , Queries.TradeChat
      , Queries.User
      , Utils
    build-depends:
        base >= 4.7 && < 5
      , aeson
      , bytestring
      , monad-control
      , monad-logger
      , mtl
      , persistent
      , persistent-postgresql
      , persistent-template
      , servant
      , servant-server
      , transformers
      , wai
      , wai-extra
      , warp
      , exceptions
      , fast-logger
      , time
      , validation
      , lens
      , safe
      , text
      , jwt
      , containers
      , bcrypt
      , case-insensitive
      , MissingH
      , dbmigrations
      , esqueleto
      , gps
      , containers

test-suite trade-leaf-api-test
    default-language:
        Haskell2010
    type:
        exitcode-stdio-1.0
    hs-source-dirs:
        test
    main-is:
        Spec.hs
    other-modules:
        SpecHelper
      , Api.ErrorSpec
      , Api.MatchSpec
      , Api.MessageSpec
      , Api.OfferSpec
      , Api.PhotoSpec
      , Api.RequestSpec
      , Api.TradeSpec
      , Api.TradeChatSpec
      , Api.UserSpec
      , Data.CoordsSpec
      , Queries.MatchSpec
      , Queries.MessageSpec
      , Queries.OfferSpec
      , Queries.RequestSpec
      , Queries.TradeSpec
      , Queries.TradeChatSpec
      , Queries.UserSpec
      , UtilsSpec
    build-depends:
        base
      , trade-leaf-api
      , QuickCheck
      , hspec
      , mtl
      , persistent
      , persistent-postgresql
      , servant
      , servant-server
      , esqueleto
      , time
      , containers
    ghc-options:
        -threaded -rtsopts -with-rtsopts=-N
